docs: clarify project contracts and fix JDK21 CI